# tc

./: .gitignore  Cargo.toml  cache.json
src/: main.rs
src/commands/: ai.rs  cache.rs  command_handler.rs  dir.rs  file.rs  mod.rs  navigation.rs
