[package]
name = "tc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ask_gemini = "0.1.4"
async-trait = "0.1.87"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
pdf-extract = "0.8.2"
lopdf = "0.35.0"
